2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* LINGUAS: New file, extracted from toplevel configure.in.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in: Ensure @CATALOGS@ is not used if NLS is disabled.
	(uninstall): Depend on uninstall-exec and uninstall-data.
	(uninstall-exec, uninstall-data, uninstall-data-no,
	uninstall-data-yes): New rules.

2001-07-29  Bruno Haible  <haible@clisp.cons.org>

	* gl.po: Update from Jesús Bravo Álvarez <jba@pobox.com>.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add src/msgcat.c, src/msgconv.c, src/msgen.c,
	src/msggrep.c, src/msgl-charset.c, src/msgl-iconv.c, src/msgsed.c.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add lib/pipe-bidi.c, lib/pipe-in.c, lib/pipe-out.c,
	lib/wait-process.c.

2001-05-18  Bruno Haible  <haible@clisp.cons.org>

	* de.po: Update from Karl Eichwalder.

2001-05-02  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add lib/xerror.c.

2001-04-29  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add src/read-po.c.

2001-04-28  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: Add src/po-charset.c.

2001-07-24  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.39 released.

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	* no.po: Update from Trond Endrestøl <endrestol@hotmail.com>.

2001-06-08  Bruno Haible  <haible@clisp.cons.org>

	* ko.po: Update from Changwoo Ryu <cwryu@debian.org>.
	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
	* ru.po: Update from Oleg S. Tihonov <tihonov@ffke-campus.mipt.ru>.
	* zh.po: Update from Yuan-Chung Cheng <platin@ms.ccafps.khc.edu.tw>.

2001-05-28  Bruno Haible  <haible@clisp.cons.org>

	* sl.po: Update from
	Primož Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>.
	* sv.po: Update from Jan Djärv <Jan.Djarv@mbox200.swipnet.se>.
	* zh.po: Update from Yuan-Chung Cheng <platin@ms.ccafps.khc.edu.tw>.

2001-05-25  Bruno Haible  <haible@clisp.cons.org>
